--- a/src/component/EventThumbnail/eventThumbnail.module.scss
+++ b/src/component/EventThumbnail/eventThumbnail.module.scss
@@ -1,4 +1,34 @@
 .event-thumb {
   height: 200px;
   width: 300px;
+  position: relative;
+  margin: 4px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  &::after {
+    background: rgba(0, 0, 0, 0.35);
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+  }
+
+  img {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .info {
+    padding: 0 8px;
+    z-index: 100;
+    color: white;
+    font-size: 23px;
+    font-weight: bold;
+    text-align: center;
+  }
 }
